# mask-imposer

./: .gitignore  .pylintrc  LICENSE  MANIFEST.in  README.md  docker-compose.yml  mypy.ini  readme.md  requirements.txt  run.py  setup.cfg  setup.py  tox.ini
.github/workflows/: lint.yml
docs/: Dockerfile  basic_plan.md
docs/source/: .conf.py.swp  conf.py  index.rst  mask_imposer.beautifiers.rst  mask_imposer.definitions.rst  mask_imposer.detector.rst  mask_imposer.rst  modules.rst
mask_imposer/: __init__.py  controller.py  input_inspector.py
mask_imposer/beautifiers/: __init__.py  terminal.py
mask_imposer/bundled/set_00/: mask_coords.json
mask_imposer/bundled/set_01/: mask_coords.json
mask_imposer/bundled/set_02/: mask_coords.json
mask_imposer/collector/: __init__.py  coords_collector.py
mask_imposer/colored_logger/: __init__.py  logger.py
mask_imposer/definitions/: __init__.py  images.py  namedtuples.py
mask_imposer/detector/: download.py  image.py  landmark_detector.py
mask_imposer/imposer/: mask_image.py  mask_imposer.py  mask_pointers.py
mask_imposer/logger_utils/: __init__.py  logger_config.py
pytorch/: README.md  face_landmarks.pth  main.py  model.py
pytorch/dataset/: celeba_dataset.py
tests/: test_mask_image_read.py  test_predictor_download.py
tests/integration/test_command_line/: test_command_line_usage.py
tests/integration/test_package/: test_python_package.py
tests/unit/: test_mask_image_read.py  test_predictor_download.py
