;[options.extras_requires]
;tests =
;    pytest>=4.6.9
;style =
;    flake8==3.9.2
;    mypy==0.770
;    pylint==2.9.6
;    isort==5.9.1

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_unused_ignores = true
ignore_missing_imports = true



[pylint.FORMAT]
max-line-length = 99

[pylint.'MESSAGES CONTROL']
disable =
    missing-docstring,
    invalid-name,
    import-error,
    inconsistent-return-statements,
    binary-op-exception